# vocascan-server

./: .env  .env.example  .eslintrc.json  .gitattributes  .gitignore  .prettierrc  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  conanfile.txt  docker-compose.yml  package-lock.json  package.json  server.js  serverSettings.json  vocascan-server.js  vocascan.config.example.js  vocascan.config1.js
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  docker.yml  test.yml  testing.yml
app/Controllers/: AuthController.js  DocsController.js  ExportController.js  GroupController.js  ImportController.js  InfoController.js  InviteCodeController.js  LanguageController.js  LanguagePackageController.js  ProfileController.js  QueryController.js  StaticPagesController.js  StatsController.js  VerificationController.js  VocabularyController.js
app/Middleware/: AdminMiddleware.js  ErrorMiddleware.js  LoggingMiddleware.js  ProtectMiddleware.js  SecurityMiddleware.js  error.js
app/Services/: AuthServiceProvider.js  DrawerServiceProvider.js  ExportServiceProvider.js  GroupServiceProvider.js  ImportServiceProvider.js  InfoServiceProvider.js  InviteCodeProvider.js  LanguagePackageProvider.js  LanguagePackageServiceProvider.js  LanguageServiceProvider.js  ProfileServiceProvider.js  QueryServiceProvider.js  StatsServiceProvider.js  VocabularyServiceProvider.js
app/Templates/mailer/: accountVerification.ejs  accountVerification.eta  layout.eta  verifyRegistration.ejs
app/Templates/views/: accountVerification.ejs  accountVerification.eta  layout.eta
app/config/: config.js  joi.js  logger.js
app/config/config/: index.js  parsers.js  schema.js
app/config/logger/: NullTransport.js  index.js
app/config/mailer/: index.js
app/utils/: ApiError.js  constants.js  error.js  index.js
cmd/: generate.js  web.js
cmd/admin/: index.js  user.js
database/: Migration.js  index.js
database/config/: config.json
database/migrations/: 0001.roles.js  0001.roles.migration.js  0002.users.js  0002.users.migration.js  0003.languagePackage.js  0003.languagePackage.migration.js  0003.languagePackages.js  0003.languages.js  0004.groups.js  0004.groups.migration.js  0004.languagePackages.js  0005.drawers.js  0005.drawers.migration.js  0006.drawers.js  0006.foreignWords.js  0006.foreignWords.migration.js  0006.vocabularyCards.js  0007.translatedWords.js  0007.translatedWords.migration.js  0007.translations.js  0007.vocabularyCards.js  0008.learnedToday.js  0008.packageProgress.js  0009.packageProgress.js  0010.inviteCodes.js  0011.emailVerification.js  20210131113415-create-categories.js  20210131135227-create-user.js  20210131135942-create-recipes.js  20210131140543-create-portions.js  20210131141501-create-ingredients.js
database/models/: Drawer.js  ForeignWord.js  Group.js  InviteCode.js  Language.js  LanguagePackage.js  LearnedToday.js  PackageProgress.js  Role.js  TranslatedWord.js  Translation.js  User.js  VocabularyCard.js  categories.js  drawers.js  foreignWords.js  groups.js  ingredients.js  languagePackages.js  portions.js  recipes.js  roles.js  translatedWords.js  users.js
database/seeders/: 0001.roles.js  0001.roles.seeder.js  0002.languages.js  0003.admin.js
database/seeders/data/: languages-iso-639-1.json
docker/: docker-compose.yml
docker/default/: docker-compose.yml  vocascan.config.js
docker/nginx/: .gitignore  docker-compose.yml  init-letsencrypt.sh
docker/traefik/: docker-compose.yml  traefik.toml  traefik_dynamic.toml  vocascan.config.js
docker/use-env/: docker-compose.yml
docs/api/: swagger.json
routes/: api.js  index.js  pages.js
scripts/: jwt-secret.js
scripts/dev-seeding/: dev-seeding.js  seeding.js
scripts/dev-seeding/seeders/: seeders.js
src/: CMakeLists.txt  authMiddleware.cpp  authMiddleware.hpp  database.cpp  database.hpp  encryption.hpp  main.cpp  newVocabHandler.hpp  registration.cpp  registration.hpp  requestManager.cpp  requestManager.hpp
src/actionHandlers/: CMakeLists.txt  registration.cpp  registration.hpp
src/adminPanel/: CMakeLists.txt  index.html
src/auth/: CMakeLists.txt  authMiddleware.cpp  authMiddleware.hpp  encryption.hpp  jwt.hpp
src/boilerplate/: CMakeLists.txt  languagePackage.hpp  user.hpp
src/database/: CMakeLists.txt  database.cpp  database.hpp
src/version/: CMakeLists.txt  GenerateVersionHeader.cmake  version.h  version.h.in
tests/: CMakeLists.txt  database-test.cpp  registration.test.js  test.cpp  tests.cpp
